--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "bitcoinjs-lib": "^6.0.1",
+    "bn.js": "^5.2.1",
+    "crypto-js": "^4.1.1",
+    "ecpair": "^2.0.1",
     "react": "^18.1.0",
     "react-chrome-extension-router": "^1.3.1",
     "react-dom": "^18.1.0",
     "react-qr-code": "^2.0.7",
-    "react-scripts": "5.0.1",
+    "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
+    "tiny-secp256k1": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "build.sh",
+    "build": "GENERATE_SOURCEMAP=false react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
