--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,12 +12,14 @@
     "bn.js": "^5.2.1",
     "crypto-js": "^4.1.1",
     "ecpair": "^2.0.1",
+    "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-chrome-extension-router": "^1.3.1",
     "react-dom": "^18.1.0",
     "react-qr-code": "^2.0.7",
     "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
+    "react-use-websocket": "3.0.0",
     "tiny-secp256k1": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
