--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
     "react-use-websocket": "3.0.0",
+    "react-useinterval": "^1.0.2",
     "tiny-secp256k1": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
