--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-use-websocket": "3.0.0",
     "react-useinterval": "^1.0.2",
     "tiny-secp256k1": "^2.1.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "wif": "^2.0.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
