--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bn.js": "^5.2.1",
     "crypto-js": "^4.1.1",
     "ecpair": "^2.0.1",
+    "elliptic": "^6.5.4",
     "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-chrome-extension-router": "^1.3.1",
@@ -21,14 +22,15 @@
     "react-switch": "^6.0.0",
     "react-use-websocket": "3.0.0",
     "react-useinterval": "^1.0.2",
+    "secp256k1": "^4.0.3",
     "tiny-secp256k1": "^2.1.2",
     "web-vitals": "^2.1.4",
     "wif": "^2.0.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "GENERATE_SOURCEMAP=false react-app-rewired build",
-    "build_win": "set GENERATE_SOURCEMAP=false && react-app-rewired build",
+    "build": "INLINE_RUNTIME_CHUNK=false GENERATE_SOURCEMAP=false react-app-rewired build",
+    "build_win": "set GENERATE_SOURCEMAP=false && set INLINE_RUNTIME_CHUNK=false && react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
